.archive/openclaw/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: openclaw-gateway
  name: openclaw-gateway
spec:
  replicas: 0
  selector:
    matchLabels:
      app: openclaw-gateway
  template:
    metadata:
      labels:
        app: openclaw-gateway
    spec:
      containers:
        - name: openclaw-gateway
          image: docker.io/alpine/openclaw:2026.2.21
          args:
            - node
            - dist/index.js
            - gateway
            - --bind
            - lan
            - --port
            - "18789"
          ports:
            - name: http
              containerPort: 18789
              protocol: TCP
          volumeMounts:
            - mountPath: /home/node/.openclaw
              name: config
            - mountPath: /home/node/.openclaw/workspace
              name: workspace
          resources:
            requests:
              cpu: 100m
              memory: 500Mi
            limits:
              cpu: 500m
              memory: 2Gi
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: config
        - name: workspace
          persistentVolumeClaim:
            claimName: workspace
