.archive/openclaw/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openclaw-gateway
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.middlewares: "openclaw-openclaw-gateway-auth@kubernetescrd"
    cert-manager.io/issuer: "cloudflare-origin-issuer"
    cert-manager.io/issuer-kind: ClusterOriginIssuer
    cert-manager.io/issuer-group: cert-manager.k8s.cloudflare.com

spec:
  rules:
    - host: claw.kentaro1043.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: openclaw-gateway
                port:
                  name: http
  tls:
    - hosts:
        - claw.kentaro1043.com
      secretName: openclaw-tls
